feat(tests): enhance Vaadin client loading waits and improve click reliability